--- a/src/ResourcesBooking.Host/Pages/Shared/_Layout.cshtml
+++ b/src/ResourcesBooking.Host/Pages/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
+                <a class="navbar-brand" asp-page="/Index">
+                    <img src="~/brand.png" width="50" height="50" />
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,7 +48,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Resources">Resources</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Resources</a>
                         </li>
                     </ul>
                 </div>
