--- a/src/ResourcesBooking.Host/Pages/Resources/Book.cshtml
+++ b/src/ResourcesBooking.Host/Pages/Resources/Book.cshtml
@@ -67,8 +67,14 @@
                 type="text" class="form-control" placeholder="Enter booking reason">
             <span asp-validation-for="BookingRequest.BookingReason" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <a href="@Model.ReturnUrl" class="btn btn-secondary">Cancel</a>  
+        <button type="submit" class="btn btn-primary">
+            <i class="fas fa-check"></i>&nbsp 
+            Submit
+        </button>
+        <a href="@Model.ReturnUrl" class="btn btn-secondary">
+            <i class="fas fa-ban"></i>&nbsp
+            Cancel
+        </a>  
 
     </form>
 </div>
