--- a/src/ResourcesBooking.Host/Pages/Shared/_Layout.cshtml
+++ b/src/ResourcesBooking.Host/Pages/Shared/_Layout.cshtml
@@ -32,6 +32,15 @@
             crossorigin="anonymous"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
     </script>
+    
+    <script type="text/javascript">
+        
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        });
+
+    </script>
+    
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/node_modules/@@fortawesome/fontawesome-free/css/all.min.css" /> 
 </head>
