--- a/src/ResourcesBooking.Host/Pages/Resources/Index.cshtml
+++ b/src/ResourcesBooking.Host/Pages/Resources/Index.cshtml
@@ -57,3 +57,7 @@
         <br />
     }
 </table>
+<a asp-page="./Add" class="btn btn-success">
+    <i class="far fa-plus-square"></i>&nbsp
+    Add group
+</a>
