--- a/src/ResourcesBooking.Host/wwwroot/css/site.css
+++ b/src/ResourcesBooking.Host/wwwroot/css/site.css
@@ -54,3 +54,15 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.avatar-mini {
+  width: 20px;
+  height: 20px;
+}
