--- a/src/ResourcesBooking.Host/Pages/Shared/_Layout.cshtml
+++ b/src/ResourcesBooking.Host/Pages/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - ResourcesBooking
+            &copy; 2019 - ResourcesBooking @ResourcesBooking.Host.Pages.Version.FullVersion
         </div>
     </footer>
 
