fixup Details.cshtml

--- a/src/ResourcesBooking.Host/Pages/Resources/Details.cshtml
+++ b/src/ResourcesBooking.Host/Pages/Resources/Details.cshtml
@@ -145,7 +145,7 @@
                         </form>
                     </div>
                 }
-                else @if(Model.CanExtend(Model.Resource))
+                else if(Model.CanExtend(Model.Resource))
                 {
                     <div class="col-auto">
                         <form method="post">
