--- a/src/ResourcesBooking.Host/Pages/Shared/_Layout.cshtml
+++ b/src/ResourcesBooking.Host/Pages/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
     var avatarSrc = User.GetAvatarUrl();
 
     var login = User?.Identity.Name;
-    var user = new ResourcesBooking.Host.Models.User
+    var user = new Models.User
     {
         Login = login,
         AvatarUrl = avatarSrc
@@ -58,12 +58,15 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Resources</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Resources/Index">Resources</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Poker" asp-page="/Index">Poker</a>
                         </li>
                     </ul>
                 </div>
                 <div class="row">
-                    @Html.Partial("Shared/Avatar", @user)
+                    @Html.Partial("Avatar", @user)
                 </div>
             </div>
         </nav>
