--- a/src/ResourcesBooking.Host/Pages/Shared/_Layout.cshtml
+++ b/src/ResourcesBooking.Host/Pages/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
     var avatarSrc = User.GetAvatarUrl();
 
     var login = User?.Identity.Name;
-    var user = new Models.User
+    var user = new User
     {
         Login = login,
         AvatarUrl = avatarSrc
