--- a/src/ResourcesBooking.Host/Pages/_ViewImports.cshtml
+++ b/src/ResourcesBooking.Host/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 @using ResourcesBooking.Host
 @namespace ResourcesBooking.Host.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using CommonLibs
