Removed collapse show

--- a/src/PlanningPoker/Areas/Poker/Pages/Session.cshtml
+++ b/src/PlanningPoker/Areas/Poker/Pages/Session.cshtml
@@ -12,13 +12,6 @@
     }
 </style>
 
-<script>    
-    $(document).ready(function () {
-        $('.collapse').collapse();
-    });
-</script>
-
-
 <div class="container-fluid">
     
     
@@ -111,7 +104,7 @@
                                     </h5>
                                 </div>
 
-                                <div id="@ariaControls" class="collapse show" aria-labelledby="@heading" data-parent="#accordion">
+                                <div id="@ariaControls" class="collapse" aria-labelledby="@heading" data-parent="#accordion">
                                     <div class="card-body">
                                         
                                         <!-- TODO extract partial view -->
